--- a/Simplenote/build.gradle
+++ b/Simplenote/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         maven { url 'https://maven.fabric.io/repo' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0'
+        classpath 'com.android.tools.build:gradle:2.2.3'
     }
 }
 
@@ -21,11 +21,11 @@ repositories {
 
 dependencies {
     compile "com.simperium.android:simperium:0.6.8"
-    compile "com.android.support:appcompat-v7:24.2.1"
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:support-vector-drawable:24.2.1'
-    compile "com.google.android.gms:play-services-analytics:9.6.1"
-    compile "com.google.android.gms:play-services-wearable:9.6.1"
+    compile "com.android.support:appcompat-v7:25.0.0"
+    compile 'com.android.support:design:25.0.0'
+    compile 'com.android.support:support-vector-drawable:25.0.0'
+    compile "com.google.android.gms:play-services-analytics:9.8.0"
+    compile "com.google.android.gms:play-services-wearable:9.8.0"
     compile 'org.wordpress:passcodelock:1.3.0'
     compile 'com.automattic:tracks:1.1.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
@@ -38,11 +38,11 @@ version "1.5.1"
 
 android {
 
-    compileSdkVersion 24
-    buildToolsVersion "24.0.3"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.0"
 
     defaultConfig {
-        applicationId "com.automattic.simplenote"
+        applicationId "com.smartnms.simplenote"
         versionName project.version
         versionCode 53
         minSdkVersion 15
@@ -64,7 +64,7 @@ android {
         }
 
         debug {
-            applicationIdSuffix '.debug'
+            //applicationIdSuffix '.debug'
         }
     }
 	
